<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adaptilo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="qr_code_scanner_prompt">Scan a QrCode</string>

    <!-- Basic Controller Fragment !-->
    <string name="basic_controller_btn_a">A</string>
    <string name="basic_controller_btn_b">B</string>
    <string name="basic_controller_btn_start">start</string>
    <string name="basic_controller_btn_select">select</string>
    <string name="basic_controller_name">Basic Controller</string>
    <string name="basic_controller_message_disconnected">Disconnected</string>
    <string name="basic_controller_qrcode_scanner_error">Invalid QrCode</string>
    <string name="basic_controller_network_unreachable_alert_title">Network is unreachable</string>
    <string name="basic_controller_network_unreachable_alert_content">Fail to connect to the game server.\nPlease check your network access.</string>
    <string name="basic_controller_room_full">Room full</string>
    <string name="basic_controller_room_unknown">Room unknown</string>

    <!-- Drums Controller Fragment !-->
    <string name="drums_controller_btn_left">L</string>
    <string name="drums_controller_btn_right">R</string>
    <string name="drums_controller_btn_start">start</string>
    <string name="drums_controller_btn_select">select</string>
    <string name="drums_controller_name">Drums Controller</string>

    <!-- Default Start dialog !-->
    <string name="start_dialog_new_game">New Game</string>
    <string name="start_dialog_disconnect">Disconnect</string>
    <string name="start_dialog_resume">Resume</string>

    <!-- Default Select dialog !-->
    <string name="select_dialog_options_positive">Save and resume</string>
    <string name="select_dialog_options_negative">Resume</string>

    <!-- Basic Controller Options Fragment !-->
    <string name="basic_controller_options_title">Pause</string>
    <string name="basic_controller_options_vibrator_key">Vibrate on keypress</string>
    <string name="basic_controller_options_vibrator_server">Allow vibration events from the server</string>


</resources>
